--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@element-plus/icons-vue": "^1.1.4",
     "@hellowuxin/mindmap": "^2.1.4",
     "@kangc/v-md-editor": "^2.3.15",
+    "@koa/router": "^12.0.1",
     "@wangeditor/editor": "^5.1.14",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^0.27.2",
     "driver.js": "^0.9.8",
     "echarts": "^5.3.3",
     "element-plus": "^2.1.11",
+    "express": "^4.18.2",
     "js-base64": "^3.7.2",
     "jsmind": "^0.6.4",
+    "koa": "^2.15.0",
+    "koa-router": "^12.0.1",
     "markmap-common": "^0.15.0",
     "markmap-lib": "^0.15.2",
     "markmap-toolbar": "^0.15.0",
