--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@wangeditor/editor": "^5.1.14",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
     "driver.js": "^0.9.8",
     "echarts": "^5.3.3",
     "element-plus": "^2.1.11",
