--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsmind": "^0.6.4",
     "koa": "^2.15.0",
     "koa-router": "^12.0.1",
+    "lodash": "^4.17.21",
     "markmap-common": "^0.15.0",
     "markmap-lib": "^0.15.2",
     "markmap-toolbar": "^0.15.0",
