--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
+    "download": "^8.0.0",
     "driver.js": "^0.9.8",
     "echarts": "^5.3.3",
     "element-plus": "^2.1.11",
@@ -24,6 +25,7 @@
     "js-base64": "^3.7.2",
     "jsmind": "^0.6.4",
     "koa": "^2.15.0",
+    "koa-body": "^6.0.1",
     "koa-router": "^12.0.1",
     "koa2-cors": "^2.0.6",
     "lodash": "^4.17.21",
