--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "echarts": "^5.3.3",
     "element-plus": "^2.1.11",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "js-base64": "^3.7.2",
     "jsmind": "^0.6.4",
     "koa": "^2.15.0",
