--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "echarts": "^5.3.3",
     "element-plus": "^2.1.11",
     "express": "^4.18.2",
+    "fast-down": "^1.0.2",
     "file-saver": "^2.0.5",
     "js-base64": "^3.7.2",
     "jsmind": "^0.6.4",
     "koa": "^2.15.0",
     "koa-body": "^6.0.1",
     "koa-router": "^12.0.1",
+    "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "lodash": "^4.17.21",
     "markmap-common": "^0.15.0",
