--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsmind": "^0.6.4",
     "koa": "^2.15.0",
     "koa-body": "^6.0.1",
+    "koa-mount": "^4.0.0",
     "koa-router": "^12.0.1",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
