--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@koa/router": "^12.0.1",
     "@wangeditor/editor": "^5.1.14",
     "@wangeditor/editor-for-vue": "^5.1.12",
+    "aria2": "^4.1.2",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "download": "^8.0.0",
@@ -39,6 +40,7 @@
     "markmap-view": "^0.15.0",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "request": "^2.88.2",
     "screenfull": "^6.0.1",
     "sortablejs": "^1.15.0",
     "video.js": "^7.20.3",
@@ -50,6 +52,7 @@
     "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0",
+    "ws": "^8.18.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
